Thu Mar 14 08:38:57 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Making new x.1.8 public available

Thu Mar 14 09:04:46 CET 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.8 released.

Thu Mar  7 19:17:15 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_Thread.cpp:

          QNX also only supports system scope for threads.

Fri Mar  1 11:21:33 UTC 2013  Martin Corino  <mcorino@remedy.nl>

        * bin/auto_run_tests.pl:
          Fix for problems with explicit test root and test folders
          that are also available in default roots.

Thu Feb 28 19:45:03 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_19_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added C++11 test for template alias support

Wed Feb 27 13:54:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Wild_Match_Test.cpp:
          Extended this test to get 100% coverage for ACE::wild_match, resolves
          Coverity 753117

Tue Feb 26 23:07:17 UTC 2013  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_g++_common.GNU: When turning on
          no-strict-aliasing, add the option to FLAGS_C_CC instead of
          CCFLAGS so that both C and C++ compilers get it.

Fri Feb 22 14:29:39 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_Vx.inl (defined): Added a fix for RTP.  Thanks
          to Thomas dot Lockhart at jpl dot nasa dot gov for contributing this.

Mon Feb 25 08:09:24 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp:
          Don't use MAX_IF as constant, is a system defined constant on
          some operating systems

        * tests/OS_Test.cpp: